<resources>
    <string name="app_name">Kotlin安卓</string>
    <string name="text_button_tj">提交</string>
    <string name="text_button_qd">确定</string>
    <string name="text_button_qx">取消</string>
    <string name="text_button_bc">保存</string>
    <string name="text_button_qc">清除</string>
    <string name="text_button_tb">同步</string>
    <string name="text_button_cz">重置</string>
    <string name="text_button_sc">删除</string>
    <string name="text_message_commit_success">提交成功</string>
    <string name="text_message_noselect">您还没选择</string>
    <string name="text_title_wz">位置</string>
    <string name="text_title_zt">状态</string>
    <string name="text_title_fwlx">服务类型</string>
    <string name="text_title_gdlx">工单类型</string>
    <string name="text_title_yxj">优先级</string>
    <string name="text_title_bm">部门</string>
    <string name="text_title_sb">设备</string>
    <string name="text_title_gd">工单</string>
    <string name="text_title_dclgd">待处理工单</string>
    <string name="text_title_dppgd">待派批工单</string>
    <string name="text_title_dspgd">待审批工单</string>
    <string name="text_title_dcdgd">待存档工单</string>
    <string name="text_title_dpjgd">待评价工单</string>
    <string name="text_title_gdcx">工单查询</string>
    <string name="text_title_xjrw">巡检任务</string>
    <string name="text_title_kcgl">库存管理</string>
    <string name="text_title_sz">设置</string>
    <string name="text_state_qb">全 部</string>
    <string name="text_state_wc">完成</string>
    <string name="text_state_wtb">未同步</string>
    <string name="text_state_wwc">未完成</string>
    <string name="text_state_pg">派工</string>
    <string name="text_state_jd">接单</string>
    <string name="text_state_wg">完工</string>
    <string name="text_state_cd">存档</string>
    <string name="text_state_dpj">待评价</string>
    <string name="text_state_yz">验证</string>
    <string name="text_state_pd">派单</string>
    <string name="text_state_wypj">我要评价</string>
    <string name="text_state_clz">处理中</string>
    <string name="text_state_ycj">已创建</string>
    <string name="text_state_dsp">待审批</string>
    <string name="text_state_kpj">可评价</string>
    <string name="text_state_pj">评价</string>
    <string name="text_state_sp">审批</string>
    <string name="text_permission_fail_xj">您拒绝照相权限</string>
    <string name="text_permission_fail_cc">您拒绝文件存储权限</string>
    <string name="text_popupWindow_dx">对象</string>
    <string name="text_popupWindow_wxgd">维修工单</string>
    <string name="text_popupWindow_qsrfwqmm">请输入服务器密码</string>
    <string name="text_popupWindow_clwc">处理完成</string>
    <string name="text_popupWindow_wc">完成</string>
    <string name="text_popupWindow_zt">暂停</string>
    <string name="text_popupWindow_zz">终止</string>
    <string name="text_popupWindow_zf">作废</string>
    <string name="text_popupWindow_td">退单</string>
    <string name="text_popupWindow_tk">退款</string>
    <string name="text_popupWindow_sqsp">申请审批</string>
    <string name="text_popupWindow_sqpz">申请批准</string>
    <string name="text_popupWindow_qx">取消</string>
    <string name="text_main_xx">消息</string>
    <string name="text_main_wd">我的</string>
    <string name="text_main_sz">设置</string>
    <string name="text_login_title">登录</string>
    <string name="text_login_hint_account">请输入账号</string>
    <string name="text_login_hint_password">请输入密码</string>
    <string name="text_login_button_next">登  录</string>
    <string name="text_act_project_message_hint">请输入项目名(如创新园、cxy、chuangxinyuan)</string>
    <string name="text_act_state_query_list_hint">区分大小写</string>
    <string name="text_frg_message_item_bj">标记</string>
    <string name="text_frg_message_item_sc">删除</string>
    <string name="text_work_order_create_title">创建工单</string>
    <string name="text_work_order_create_tip_qsrlxdh">请输入联系电话</string>
    <string name="text_work_order_create_tip_qxzwz">请选择位置</string>
    <string name="text_work_order_create_tip_qxzgdlx">请选择工单类型</string>
    <string name="text_work_order_create_tip_qxzfwle">请选择服务类型</string>
    <string name="text_work_order_create_jbxx">基本信息</string>
    <string name="text_work_order_create_sqr">申请人</string>
    <string name="text_work_order_create_lxdh">联系电话</string>
    <string name="text_work_order_create_bm">部门</string>
    <string name="text_work_order_create_wz">位置</string>
    <string name="text_work_order_create_gdlx">工单类型</string>
    <string name="text_work_order_create_fwlx">服务类型</string>
    <string name="text_work_order_create_yxj">优先级</string>
    <string name="text_work_order_create_yysj">预约时间</string>
    <string name="text_work_order_create_gzsb">故障设备</string>
    <string name="text_work_order_create_wtms">问题描述</string>
    <string name="text_work_order_create_hint_qsrnr">请输入内容</string>
    <string name="text_work_order_create_tip_nr">最多可以输入1000字符</string>
    <string name="text_work_order_create_item_sbbm">设备编码:</string>
    <string name="text_work_order_create_item_sbmc">设备名称:</string>
    <string name="text_work_order_create_item_sbwz">设备位置:</string>
    <string name="text_work_order_details_title">基本信息</string>
    <string name="text_work_order_details_gsmc">公司名称:</string>
    <string name="text_work_order_details_wz">位置:</string>
    <string name="text_work_order_details_yysj">预约时间:</string>
    <string name="text_work_order_details_kgsj">开工时间:</string>
    <string name="text_work_order_details_jbsj">基本时间:</string>
    <string name="text_work_order_details_wcsj">完成时间:</string>
    <string name="text_work_order_details_ms">描述:</string>
    <string name="text_work_order_details_bm">部门:</string>
    <string name="text_work_order_details_fwlx">服务类型:</string>
    <string name="text_work_order_details_gjsj">预估时间:</string>
    <string name="text_work_order_details_sfx">收费项</string>
    <string name="text_work_order_details_khqz">客户签字</string>
    <string name="text_work_order_details_shsm">审核说明:</string>
    <string name="text_work_order_details_zcqm">正常签名:</string>
    <string name="text_work_order_details_lsjl">历史记录</string>
    <string name="text_work_order_details_ckqb">查看全部</string>
    <string name="text_work_order_details_btn_jd">接单</string>
    <string name="text_work_order_details_btn_txgznr">填写工作内容</string>
    <string name="text_work_order_details_btn_wc">完工</string>
    <string name="text_work_order_details_state_dsh">待审核</string>
    <string name="text_set_download_title">离线下载</string>
    <string name="text_set_download_state_und">未下载</string>
    <string name="text_set_download_state_d">已下载</string>
    <string name="text_set_download_state_alld">下载全部</string>
    <string name="text_set_download_deviceInfo">设备信息</string>
    <string name="text_set_download_deviceTypeInfo">设备类型信息</string>
    <string name="text_set_download_locationInfo">位置信息</string>
    <string name="text_set_download_departmentInfo">部门信息</string>
    <string name="text_set_download_priorityInfo">优先级信息</string>
    <string name="text_set_download_workProcessInfo">工作流程信息</string>
    <string name="text_set_download_serverTypeInfo">服务类型信息</string>
    <string name="text_set_download_demandTypeInfo">工作流程信息</string>
    <string name="text_qrcode_title">二维码扫描</string>
    <string name="text_qrcode_tip_nr">将条码放入框内，即可自动扫描</string>
    <string name="text_qrcode_tip_nr2">将二维码/条码放入框内，即可自动扫描</string>
    <string name="text_work_content_input_title">工作内容填写</string>
    <string name="text_work_content_input_tip_nr">请输入工作内容描述</string>
    <string name="text_work_content_input_msg">最多可以输入1000字符</string>
    <string name="text_work_order_apply_approve_title">申请审批</string>
    <string name="text_work_order_evaluate_title">工单评价</string>
    <string name="text_work_order_evaluate_fwsfwc">服务是否完成?</string>
    <string name="text_work_order_evaluate_fwsfmy">服务是否满意?</string>
    <string name="text_work_order_evaluate_my">满意</string>
    <string name="text_work_order_evaluate_bmy">不满意</string>
    <string name="text_work_order_evaluate_s">是</string>
    <string name="text_work_order_evaluate_f">否</string>
    <string name="text_work_order_evaluate_fwtdmyd">服务态度满意度?</string>
    <string name="text_work_order_evaluate_qtbgyj">请提宝贵意见</string>
    <string name="text_work_order_evaluate_ms">描述</string>
    <string name="text_select_query_list_title">请选择派工人员</string>
    <string name="text_select_query_list_tip_bar1">请选择执行人员</string>
    <string name="text_plan_maintain_ri">日</string>
    <string name="text_plan_maintain_1">一</string>
    <string name="text_plan_maintain_2">二</string>
    <string name="text_plan_maintain_3">三</string>
    <string name="text_plan_maintain_4">四</string>
    <string name="text_plan_maintain_5">五</string>
    <string name="text_plan_maintain_6">六</string>
    <string name="text_plan_maintain_dyrw">当月任务</string>
    <string name="text_plan_maintain_jt">今天</string>
    <string name="text_plan_maintain_jst">近三天</string>
    <string name="text_plan_maintain_jqt">近七天</string>
    <string name="text_plan_maintain_yl">遗漏</string>
    <string name="text_plan_maintain_cx">查询</string>
    <string name="text_plan_maintain_details_title">计划性维护详情</string>
    <string name="text_plan_maintain_details_jbxx">基本信息</string>
    <string name="text_plan_maintain_details_wbmc">维保名称:</string>
    <string name="text_plan_maintain_details_zq">周期:</string>
    <string name="text_plan_maintain_details_scwhsj">首次维护时间:</string>
    <string name="text_plan_maintain_details_xcwhsj">下次维护时间:</string>
    <string name="text_plan_maintain_details_wbzq">维保周期:</string>
    <string name="text_plan_maintain_details_jsrq">结束日期:</string>
    <string name="text_plan_maintain_details_hs">耗时:</string>
    <string name="text_plan_maintain_details_zdscgd">自动生成工单:</string>
    <string name="text_plan_maintain_details_tqts">提前天数:</string>
    <string name="text_plan_maintain_details_bz">步骤</string>
    <string name="text_property_manage_title">资产管理</string>
    <string name="text_property_manage_jbxx">基本信息</string>
    <string name="text_property_manage_sblb">设备列表</string>
    <string name="text_property_manage_details_title">设备信息</string>
    <string name="text_polling_query_title">巡检查询</string>
    <string name="text_polling_query_syy">上一月</string>
    <string name="text_polling_query_xyy">下一月</string>
    <string name="text_frg_polling_query_xjmc">巡检名称</string>
    <string name="text_frg_polling_query_qrsxjmc">请输入巡检名称</string>
    <string name="text_frg_polling_query_bm">部门</string>
    <string name="text_frg_polling_query_qxz">请选择</string>
    <string name="text_frg_polling_query_xjkssj">巡检开始时间</string>
    <string name="text_frg_polling_query_xjjssj">巡检结束时间</string>
    <string name="text_frg_polling_query_rwzt">任务状态</string>
    <string name="text_frg_polling_query_dwzt">点位状态</string>
    <string name="text_frg_polling_query_gdh">工单号</string>
    <string name="text_frg_polling_query_pfmm">pfm编码</string>
    <string name="text_frg_polling_query_cjsj">创建时间</string>
    <string name="text_frg_polling_query_gdlx">工单类型</string>
    <string name="text_frg_polling_query_yxj">优先级</string>
    <string name="text_frg_polling_query_gdzt">工单状态</string>
    <string name="text_frg_polling_task_details_zwxjrw">暂无巡检任务</string>
    <string name="text_polling_task_title">巡检任务</string>
    <string name="text_polling_sys">扫一扫</string>
    <string name="text_signature_hand_title">签名</string>
    <string name="text_signature_hand_tip">还没有签名</string>
    <string name="text_project_message_title">多项目信息</string>
    <string name="text_project_message_tip_nr">请输入项目名(如创新园、cxy、chuangxinyuan)</string>
    <string name="text_project_message_tip_qfdxx">区分大小写</string>
    <string name="text_about_us_title">关于我们</string>
    <string name="text_shared_title">分享</string>
    <string name="text_frg_setting_sz">设置</string>
    <string name="text_frg_setting_wdbz">我的保障</string>
    <string name="text_bind_phone_ndjsjh">您的旧手机号</string>
    <string name="text_bind_phone_qsrxsjhm">请输入新手机号</string>
    <string name="text_bind_phone_qsryzm">请输入验证码</string>
    <string name="text_bind_phone_hqyzm">获取验证码</string>
</resources>