<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MatchMatch.Vertical"
    android:background="@color/color_common_bg">

    <include layout="@layout/layout_title_bar" />

    <LinearLayout
        style="@style/MatchWrap.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_dp50"
        android:background="@color/white"
        android:gravity="center"
        android:paddingLeft="@dimen/item_dp15"
        android:paddingRight="@dimen/item_dp15">

        <Button
            android:id="@+id/btn_tabLeft"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/button_tar_left_select"
            android:button="@null"
            android:gravity="center"
            android:text="@string/text_state_qb"
            android:textColor="@drawable/selector_tar_textcolor"
            android:textSize="@dimen/textsize_normal" />

        <Button
            android:id="@+id/btn_tabCenter"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/button_tar_center"
            android:button="@null"
            android:gravity="center"
            android:text="@string/text_state_wtb"
            android:textColor="@drawable/selector_tar_textcolor"
            android:textSize="@dimen/textsize_normal" />

        <Button
            android:id="@+id/btn_tabRight"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/button_tar_right"
            android:button="@null"
            android:gravity="center"
            android:text="@string/text_state_wwc"
            android:textColor="@drawable/selector_tar_textcolor"
            android:textSize="@dimen/textsize_normal" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_lightgray" />

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
</LinearLayout>